Changed the input formats. The current problem is that the reduce keys are not aggregated.